@@ -1,3 +1,10 @@
+Fri Feb 21 10:37:54 CST 2003 mein@cs.umn.edu
+	Added Goofsters alt-m menu for merging verts in edit mode.
+
+Fri Feb 21 10:37:54 CST 2003 mein@cs.umn.edu
+	Added MacOSX plugin stuff
+
+
 Initial Change Log for Blender 2.26 Sun Feb  9 10:53:10 UTC 2003
 
 New features of Blender 2.26:
